# seo_check

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  analyzer.py  app.py  config.py  crawl_runner.py  crawler.py  main.py  pyproject.toml  reporter.py  requirements.txt  setup.py  test_out.jl  tuworker_seo_analyzer.py  utils.py  verify_ws_browser.py  viewer.html
src/seo_check/: analyzer.py  app.py  config.py  crawler.py  main.py  reporter.py  verify_ws_connection.py
src/seo_check/checks/: anchors.py  content.py  duplicates.py  headers.py  hreflang.py  http.py  images_broken.py  indexability.py  links.py  meta.py  mixed_content.py  performance.py  robots.py  schema.py  security.py  social.py  structure.py  url_quality.py
src/seo_check/integrations/: gsc.py  lighthouse.py
src/seo_check/templates/: index.html  issue_detail.html  page_detail.html  report.html
templates/: index.html  issue_detail.html  page_detail.html  report.html
tests/: test_analyzer.py  test_cli.py  test_integrations.py
