[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo_check"
version = "0.1.0"
description = "A CLI tool for SEO analysis with web reporting capabilities."
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "advertools>=0.15.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart>=0.0.5",
    "jinja2>=3.1.0",
    "requests>=2.28.0",
    "websockets>=10.0",
    "httpx",
    "lxml",
    "scrapy"
]

[project.scripts]
seo-check = "seo_check.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short",
]
